--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "framer-motion": "^4.1.17",
     "graphql": "^15.7.2",
     "next": "12.0.1",
+    "next-urql": "^3.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-is": "^17.0.2",
     "urql": "^2.0.5"
   },
   "devDependencies": {
