--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-is": "^17.0.2",
+    "typeorm": "^0.2.40",
     "urql": "^2.0.5"
   },
   "devDependencies": {
